<resources>
    <string name="app_name">The Study Hub</string>
    <string name="launch_screen_next"><![CDATA[>>]]></string>
    <string name="welcome_to">Welcome to</string>
    <string name="study_hub">Study Hub</string>
    <string name="your_ultimate_study_companion">Your ultimate study companion!</string>
    <string name="next1">Next</string>
    <string name="collaborate_with_peers">Collaborate with Peers</string>
    <string name="join_study_groups_and_achieve_your_goals_together">Join study groups and achieve your goals together…</string>
    <string name="get_started">Get Started</string>
    <string name="organize_your_learning">Organize Your Learning</string>
    <string name="keep_all_your_study_materials_in_one_place">Keep all your study materials in one place…</string>
    <string name="next2">Next</string>
    <string name="sign_up">Sign up</string>
    <string name="to_join_the_study_hub">To join the Study Hub</string>
    <string name="full_name">Full Name</string>
    <string name="signup_box_field_one">signup_box_field_one</string>
    <string name="signup_box_rectangle">signup box rectangle</string>
    <string name="circle_shaped_black_logo">circle shaped black logo</string>
    <string name="signup_box_field_two">signup box field two</string>
    <string name="age">Age</string>
    <string name="profile_icon">profile icon</string>
    <string name="man_icon">man icon</string>
    <string name="e_mail">E-mail</string>
    <string name="signup_box_field_three">signup_box_field_three</string>
    <string name="mail_icon">mail icon</string>
    <string name="password">Password</string>
    <string name="signup_box_field_four">signup_box_field_four</string>
    <string name="first_lock_icon">first lock icon</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup_box_field_five">signup_box_field_five</string>
    <string name="sign_up_button">Sign up</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="login_hyper_text">Login</string>
    <string name="hi_siyumi">Hi Siyumi</string>
    <string name="navigation_bar">navigation bar</string>
    <string name="ready_to_learn_today">Ready to learn today?</string>
    <string name="search_now">Search now...</string>
    <string name="search_icon">search_icon</string>
    <string name="see_all">See All</string>
    <string name="recent_activity_box">Recent activity box</string>
    <string name="settings_icon">Settings icon</string>
    <string name="small_squre_to_settings">Small squre to settings</string>
    <string name="profile_photo">Profile photo</string>
    <string name="notes_image">notes image</string>
    <string name="small_white_squire">small white squire</string>
    <string name="upcoming_activities">Upcoming Activities</string>
    <string name="upload_this_week_notes">Upload this week notes</string>
    <string name="itp_study_session">ITP study session</string>
    <string name="study_group_image">study group image</string>
    <string name="try_a_quiz">Try a Quiz</string>
    <string name="question_image">Question_image</string>
    <string name="itp_project_proposal">ITP Project Proposal</string>
    <string name="unity_image">unity image</string>
    <string name="mad_app_ui_design">MAD App UI design</string>
    <string name="down_arrow">down arrow</string>
    <string name="home_icon">home icon</string>
    <string name="resources_icon">Resources icon</string>
    <string name="search_bar">Search bar</string>
    <string name="mobile_app_image">mobile app image</string>
    <string name="schedule_icon">Schedule icon</string>
    <string name="profile_navigation">profile navigation</string>
    <string name="notification_bell_icon">notification bell icon</string>
    <string name="red_dot">red dot</string>
    <string name="profile">Profile</string>
    <string name="profile_page_photo">Profile page photo</string>
    <string name="siyumi_kumarasinghe">Siyumi Kumarasinghe</string>
    <string name="skumarasinghe_gmail_com">skumarasinghe@gmail.com</string>
    <string name="personal_information">Personal Information</string>
    <string name="profile_details_block">profile details block</string>
    <string name="full_name2">Full Name</string>
    <string name="profile_icon_in_profile_screen">Profile icon in profile screen</string>
    <string name="profile_page_field_box1">profile page field box!</string>
    <string name="siyumi_kumarasinghe2">Siyumi Kumarasinghe</string>
    <string name="emai_num">skumarasinghe@gmail.com</string>
    <string name="e_mail2">E-mail</string>
    <string name="email_icon">email_icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="_071_1234567">071–1234567</string>
    <string name="phone_icon">phone icon</string>
    <string name="pencil_icon">pencil_icon</string>
    <string name="pencil_icon2">pencil_icon2</string>
    <string name="pencil_icon3">pencil_icon3</string>
    <string name="goals">Goals</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="your_achievements">Your Achievements</string>
    <string name="goal_field">goal field</string>
    <string name="logo_in_launch_screen">logo in launch screen</string>
    <string name="white_circle_in_the_middle">white circle in the middle</string>
    <string name="onboarding_screen_image">onboarding screen image</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="password2">Password</string>
    <string name="e_mail3">E-mail</string>
    <string name="age2">Age</string>
    <string name="full_name3">Full Name</string>
    <string name="lock_icon_2">lock icon 2</string>
    <string name="search_here">Search here...</string>
    <string name="my_goals">My Goals</string>
    <string name="textbox1">textbox1</string>
    <string name="medal_logo">Medal_logo</string>
    <string name="completed_itp_project_proposal">Completed ITP Project Proposal</string>
    <string name="completed_english_assignment">Completed English Assignment</string>
    <string name="scored_physics_quiz_80">Scored Physics quiz 80%</string>
    <string name="evaluated_mad_exam_01">Evaluated MAD exam 01</string>
    <string name="completed_physics_activity">Completed Physics Activity</string>
    <string name="install_mern_softwares">Install MERN softwares</string>
    <string name="designed_itp_wireframes">Designed ITP wireframes</string>
    <string name="did_itp_activity_02">Did ITP Activity 02</string>
    <string name="scored_11_20_in_ps_quiz">Scored 11/20 in PS quiz</string>
    <string name="manage_notes">Manage Notes</string>
    <string name="search_box_of_resource_screen">Search Box of resource screen</string>
    <string name="nates_image_with_books">Nates image with books</string>
    <string name="search_here2">Search here...</string>
    <string name="search_icon2">search icon2</string>
    <string name="_3rd_resource_box">3rd resource box</string>
    <string name="_2nd_resource_box">2nd resource box</string>
    <string name="_1st_resource_box">1st resource box</string>
    <string name="itp2">ITP</string>
    <string name="dsa">DSA</string>
    <string name="dsa_photo">DSA photo</string>
    <string name="mad">MAD</string>
    <string name="mad_image">MAD image</string>
    <string name="itp_photo">itp Photo</string>
    <string name="_4th_resource_box">4th resource box</string>
    <string name="_6th_resource_box">6th resource box</string>
    <string name="_5th_resource_box">5th resource box</string>
    <string name="english">English</string>
    <string name="biology">Biology</string>
    <string name="physics">Physics</string>
    <string name="biology_image">biology image</string>
    <string name="physics_image">physics image</string>
    <string name="english_image">english image</string>
    <string name="music">Music</string>
    <string name="history">History</string>
    <string name="history_image">History image</string>
    <string name="music_image">Music image</string>
    <string name="_9th_resource_box">9th resource box</string>
    <string name="_8th_resource_box">8th resource box</string>
    <string name="_7th_resource_box">7th resource box</string>
    <string name="science">Science</string>
    <string name="science_image">science image</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_image">Login image</string>
    <string name="login_to_study_hub">Login to Study Hub</string>
    <string name="user_name">User name</string>
    <string name="password3">Password</string>
    <string name="re_enter_password2">Re-enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_in">Sign in</string>
    <string name="login2">Login</string>
    <string name="log_out2">Log Out</string>
    <string name="you_re_logged_out">You\'re Logged out!</string>
    <string name="log_in3">Log in</string>
    <string name="close_app">Close App</string>
    <string name="plus">plus</string>


</resources>